# amazon-sku-skill

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  SUBMISSION.md  pyproject.toml
.claude/skills/competitor-content-intelligence/: SKILL.md
.claude/skills/competitor-content-intelligence/data/: mock_competitors.json
.claude/skills/competitor-content-intelligence/scripts/: extract_styleguide.py  fetch_listing.py  find_competitors.py  get_sku.py
data/: ally_skus.csv  amazon_content_guidelines.md  amazon_styleguide_extracted.md  bpn_skus.csv
example_runs/: B0C28WVJF7_recommendation_20260608.md  B0DGHN493N_recommendation_20260608.md  README.md
example_runs/archive/: ALY-DASH-SPORT-004_recommendation_20260608.md  ALY-STUDIO-50-005_recommendation_20260608.md
